[tool.poetry]
name = "mpi-data"
version = "0.1.0"
description = ""
authors = ["Rick Anderson <rick.rickanderson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.0.28"
sentence-transformers = "^2.5.1"
faiss-cpu = "^1.8.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
